test/files/neg/sd128.check
Test.scala:4: error: class C1 inherits conflicting members:
  <defaultmethod> def f(): Int (defined in trait A) and
  def f: Int (defined in trait T)
  (note: this can be resolved by declaring an `override` in class C1.)
class C1 extends A with T // error
      ^
Test.scala:14: error: `override` modifier required to override concrete member:
<defaultmethod> def f(): Int (defined in trait A)
  def f() = 9999 // need override modifier
      ^
two errors found
